# PL4_SVM

./: CMakeLists.txt  LICENSE.md  README.md  SPECIFICATION.md
src/: SVM.cpp  main.cpp
src/headers/: PL4_SVM_Config.hpp.in  SVM.hpp
